<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:elevation="5dp"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:text="@string/hint_criar_conta"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="txtLogin" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_marginLeft="-25dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_marginTop="50dp"
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/coloredt">

                    <EditText
                        android:hint="@string/hint_email"
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/coloredt">

                    <EditText
                        android:hint="@string/hint_nome"
                        android:id="@+id/edtNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/coloredt"
                        app:passwordToggleEnabled="true">

                    <EditText
                        android:hint="@string/hint_senha"
                        android:id="@+id/edtSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>



                    <android.support.design.widget.TextInputLayout
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/coloredt"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:hint="@string/digite_a_senha_novamente"
                            android:id="@+id/edtRepetirSenha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:onClick="btnCriar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ui"
                    android:text="@string/criar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>