<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".novasActivity.NovoTreinoActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryEscuraStatusBar"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbarCriarTreino"
        app:titleTextColor="@color/colorWhite"
        app:subtitleTextColor="@color/colorWhite"/>

    <Spinner
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:id="@+id/sppiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimatyEscuraAccent"
        android:entries="@array/treinos" />


    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:maxLines="4"
            android:id="@+id/edtTreino"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edit_style"
            android:textColorHint="@color/coloredt"
            android:hint="@string/hint_exercicio"
            android:padding="@dimen/padding_edt" />


        <Button
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:text="@string/salvar"
            android:textAllCaps="false"
             />


    </LinearLayout>

    <RelativeLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="150dp"
            android:id="@+id/txtNenhumItem"
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/txt_criar_texto_hint"
            android:textColor="@color/coloredt"
            android:textSize="25sp"
            android:textStyle="italic"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:divider="@color/fui_transparent"
            android:padding="@dimen/padding_listview" />

    </RelativeLayout>

</LinearLayout>