<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryEscuraStatusBar"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbarOutrosTreinos"
        app:titleTextColor="@color/colorWhite"
        app:subtitleTextColor="@color/colorWhite"/>

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNomeLuta"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_style"
            android:hint="@string/hint_exercicio"
            android:padding="14dp"
            android:textColorHint="@color/coloredt"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/btnSalvarLuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:text="@string/salvar"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spnDias"
                android:layout_width="174dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimatyEscuraAccent"
                android:entries="@array/dias"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtHours"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:text="Selecione a hora"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="@+id/spnDias"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toEndOf="@+id/spnDias"
                app:layout_constraintTop_toTopOf="@+id/spnDias"
                app:layout_constraintVertical_bias="0.454" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtNenhumItem"
            android:layout_width="wrap_content"
            android:layout_height="204dp"
            android:layout_alignTop="@+id/listViewLuta"
            android:layout_marginTop="109dp"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/hint_luta"
            android:textColor="@color/coloredt"
            android:textSize="25sp"
            android:textStyle="italic"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/listViewLuta"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</LinearLayout>